Fix nav links overflow

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     background-position: center;
     background-size: cover;
     position: relative;
+    overflow-x: hidden
 }
 
 nav{
